tests/script_errors/invalid_utf8_1/error.txt
Error: 
    1 | "\u000"
      |  ^^^^^^ An invalid UTF8 escape sequence was found